--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,92 +1,164 @@
 @import "~normalize.css";
 @import "../scss/fonts.scss";
+
+//стили для обертки
 .wrapper {
-	background: #F2F2F2;
-	margin: 0 auto;
 	display: flex;
+	height: 480px;
+	margin: 0 auto;
 	max-width: 624px;
+	background: #F2F2F2;
+	padding-top: 150px;
+}
+.userInfo__form {
+	margin-left: 24px;
+	margin-bottom: 50px;
 }
 
-//Logo
+//стилизуем левый блок с лого
 .logo {
+	width: 22%;
 	background: #5A61ED;
-	bottom: 0.11%;
+	//перенесем текст вниз блока logo
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-end;
-	align-items: flex-end;//не работает
+	align-items: flex-end;
 }
-.logo__text  {
-	font-family: 'PTSans-Regular', sans-serif;
+.logo__text {
+	padding-top: 88px;
+	margin-bottom: 25px;
+	font-family: 'PTSans-Regular';
 	font-style: normal;
-  font-weight: normal;
-  font-size: 49px;
-  line-height: 63px;
-  letter-spacing: 0.5px;
-  color: #FFFFFF;
-  transform: rotate(-90deg);
-	text-align: end;//не работает
+	font-weight: normal;
+	font-size: 49px;
+	line-height: 63px;
+	letter-spacing: 0.5px;
+	color: #FFFFFF;
+	transform: rotate(-90deg);
+	white-space: nowrap;//чтобы текст не переносился
+	padding-right: 20px;
 }
 
-//User form
+//блок input
 .userInfo {
+	width: 78%;
 	display: flex;
 	flex-direction: column;
+	justify-content: space-around;
 }
+
+//Заголовок формы
 .userInfo__title {
+	margin-top: 40px;
+	margin-left: 21px;
+	height: 16%;
 	display: flex;
 	flex-direction: column;
 }
 .userInfo__titleText {
-	font-family: 'WorkSans-Regular', sans-serif;
+	font-family: 'WorkSans-Regular';
 	font-style: normal;
 	font-weight: 500;
 	font-size: 22px;
 	line-height: 26px;
-	/* identical to box height */
 	letter-spacing: -0.46px;
 	color: #111111;
 }
 .userInfo__titleDescribe {
 	font-family: 'WorkSans-Light';
 	font-style: normal;
-	//font-weight: 300;
+	font-weight: 300;
 	font-size: 14px;
 	line-height: 16px;
 	color: #111111;
 }
 
-//form
+//блок инпутов формы
 .userInfo__form {
-	display: flex;
-	flex-direction: column;
-	background: #FFFFFF;
+	height: 74%;
 }
 .userInfo__wrapper {
 	display: flex;
 }
 .userInfo__block {
-	border: none;
 	width: 45%;
 	display: flex;
-	
+	border: none;
+	margin-top: 20px;
 }
-.userInfo__label {
+//блок Gender
+.userInfo__legend {
 	font-family: 'WorkSans-Light';
 	font-style: normal;
 	font-weight: 300;
 	font-size: 12px;
 	line-height: 14px;
-	/* identical to box height */
 	color: #7C7C7C;
-	display: block;
 }
+.userInfo__label-Gender {
+	font-family: 'WorkSans-Regular';
+	font-style: normal;
+	font-weight: normal;
+	font-size: 14px;
+	line-height: 16px;
+	color: #111111;
+}
+//общие стили инпутов
 .baseInput {
 	width: 100%;
 	border: none;
+	font-family: 'WorkSans-Regular';
+	font-weight: normal;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 14px;
+	line-height: 16px;
+	color: #111111;
+	height: 16px;
+	background-color: #FFFFFF;
 }
-
-.userInfo__legend {
+//общие стили меток
+.userInfo__label {
+	height: 14px;
+	font-family: 'WorkSans-Light';
+	font-style: normal;
+	font-weight: 300;
+	font-size: 12px;
+	line-height: 14px;
+	color: #7C7C7C;
+	border: none;
+}
+//кнопка отправки
+.userInfo__block-footer {
+	display: flex;
+	flex-direction: row;
 	width: 100%;
+	flex-wrap: nowrap;
+	border: none;
 }
-
+.userInfo__label-footer {
+	
+	height: 15px;
+	font-family: 'WorkSans-Light';
+	font-style: normal;
+	font-weight: 300;
+	font-size: 13px;
+	line-height: 15px;
+	color: #000000;
+}
+.submit {
+	width: 154px;
+	height: 32px;
+	background: #5A61ED;
+	border: 0.5px solid #FFFFFF;
+	font-family: 'PTSans-Regular';
+	font-style: normal;
+	font-weight: normal;
+	font-size: 14px;
+	line-height: 18px;
+	color: #FFFFFF;
+}
+.userInfo__title-footer {
+	width: 45%;
+}
